# RCS

./: BlockMatrix.h  BlockSystem.h  CMakeLists.txt  Complex.h  Mesh.h  Quadrature.h  Solver.h  Specializations.h  Vector.h  main.cpp  rcs.sh
Complex/: Functions.h  Operators.h  Types.h
Complex/Functions/: Deduction.h
Complex/Functions/Def/: Abs.h  AbsSquared.h  Acos.h  Acosh.h  Asin.h  Asinh.h  Atan.h  Atan2.h  Atanh.h  Cbrt.h  Cos.h  Cosh.h  Exp.h  Exp2.h  Expm1.h  Hypot.h  Log.h  Log10.h  Log1p.h  Log2.h  Pow.h  Sgn.h  Sin.h  Sinh.h  SinСos.h  Sqrt.h  Tan.h  Tanh.h
Complex/Operators/Def/: Add.h  Cmp.h  Con.h  Div.h  Log.h  Mul.h  Neg.h  Pos.h  Sub.h
Complex/Types/: Bo.h  Co.h  Im.h  Re.h
Matrix/: Lapack.h  Matrix.h  Pivots.h
Mesh/: STL.h
Solver/: Edge.h  Face.h  Input.h  Integrator.h  Logger.h  Mesh.h  Solution.h
Vector/: Functions.h  Operators.h  Types.h
